# zama-jobs-api

./: .gitignore  ARD.md  README.md  openapi.yaml
examples/job-api/: Cargo.toml  build.rs
examples/job-handler/: .dockerignore  Dockerfile  Dockerfile.simple  Dockerfile.standalone
examples/job-handler/src/: main.rs
examples/job-processor/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
examples/job-processor/logic/: processor.go
examples/job-processor/model/: job_completion_event.go  job_event.go  job_status.go
examples/smart-contract/: JobRegistry.sol
kubernetes/: DEPLOYMENT_GUIDE.md  MANUAL_DEPLOYMENT.md  Makefile  STEP_BY_STEP_BUILD_GUIDE.md  build-images.sh  cleanup.sh  kong-values.yaml  nats-values.yaml
kubernetes/00-namespaces/: namespaces.yaml
kubernetes/01-cilium/: cilium-darwin-amd64.tar.gz.sha256sum  install.sh  values-minimal.yaml  values-simple.yaml  values.yaml
kubernetes/02-storage/: minio.yaml  postgres.yaml  redis.yaml
kubernetes/03-nats/: nats-cluster.yaml  values.yaml
kubernetes/04-keycloak/: keycloak.yaml
kubernetes/05-kong/: values.yaml
kubernetes/06-services/: blockchain-service.yaml  job-processing.yaml  job-submission.yaml  metering-service.yaml
kubernetes/07-policies/: cilium-policies.yaml
kubernetes/08-monitoring/: grafana.yaml  prometheus.yaml
kubernetes/base/: job-handler-deployment.yaml  job-processor-deployment.yaml  kustomization.yaml  namespace.yaml  nats-deployment.yaml  nats-statefulset.yaml
kubernetes/overlays/development/: kustomization.yaml  namespace.yaml
(+16 files in other folders)
