[package]
name = "job-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
job-api = { path = "../job-api" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.4"
actix-rt = "2.9"
async-nats = "0.35"
futures = "0.3"
dashmap = "5.5"


[[bin]]
name = "job-handler"
path = "src/main.rs"